--- a/taos-ws/Cargo.toml
+++ b/taos-ws/Cargo.toml
@@ -25,13 +25,13 @@ serde_with = "2.0.0"
 taos-query = { path = "../taos-query", version = "0.*" }
 thiserror = "1"
 tokio = { version = "1", features = ["full"] }
-tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
+tokio-tungstenite = { version = "0.17" }
 
 [dev-dependencies]
 pretty_env_logger = "0.4.0"
 
 [features]
 default = ["tmq"]
-native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
+# native-tls-vendored = ["tokio-tungstenite/native-tls-vendored"]
 sync = []
 tmq = []
